# devops-examples

./: README.md
frontend-backend-compose/: README.md  docker-compose.yml  pyproject.toml
frontend-backend-compose/backend/: Dockerfile  backend.py
frontend-backend-compose/frontend/: Dockerfile  frontend.py
htmx-nginx/: README.md  compose.yml  main.py  nginx.conf  pyproject.toml
htmx-nginx/docker/: Dockerfile.backend
htmx-nginx/templates/: base.html  index.html
htmx-nginx/templates/partials/: items.html
simple-data-platform/: .gitignore  README.md  compose.yml  nginx.conf  pyproject.toml  system-diagram.drawio
simple-data-platform/backend/: crud.py  initialize_database.py  main.py  schema.py
simple-data-platform/database/: schema.xmind
simple-data-platform/docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.nginx  Dockerfile.prefectserver  Dockerfile.prefectworker
simple-data-platform/frontend/: main.py
simple-data-platform/prefect/: example_flow.py  example_flow_parameters.py  example_task.py
