[tool.poetry]
name = "frontend-backend-deployment"
version = "0.1.0"
description = ""
authors = ["Burak Basaran <basaranoguzburak@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
dash = "^2.18.2"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
