[tool.poetry]
name = "htmx-nginx"
version = "0.1.0"
description = ""
authors = ["Burak Basaran <basaranoguzburak@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.6"
jinja2 = "^3.1.4"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
